--- a/machineLearnig.ipynb
+++ b/machineLearnig.ipynb
@@ -762,6 +762,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8IeG6grLujQe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Créer un diagramme à barres pour visualiser la distribution des catégories d'âge\n",
         "age_bar_plot <- ggplot(train.features, aes(x = age_category)) +\n",
@@ -2153,9 +2162,158 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "CV_folds <- 10\n",
+        "#n_variables <- 20\n",
+        "\n",
+        "\n",
+        "size_CV <- floor(N / CV_folds)\n",
+        "\n",
+        "CV_err <- matrix(0, nrow = n, ncol = CV_folds)\n",
+        "\n",
+        "for (i in 1:CV_folds) {\n",
+        "    \n",
+        "    idx_ts <- (((i - 1) * size_CV + 1):(i * size_CV))\n",
+        "    X_ts <- encoded_train_data[idx_ts,]\n",
+        "    Y_ts <- train_labels$damage_grade[idx_ts]\n",
+        "    \n",
+        "    idx_tr <- setdiff(1:N, idx_ts)\n",
+        "    X_tr <- encoded_train_data[idx_tr,]\n",
+        "    Y_tr <- train_labels$damage_grade[idx_tr]\n",
+        "    \n",
+        "    correlation <- abs(cor(X_tr, Y_tr))\n",
+        "    \n",
+        "    selected <- c()\n",
+        "    candidates <- 1:n\n",
+        "    \n",
+        "    for (j in 1:n) {\n",
+        "        redundancy_score <- numeric(length(candidates))\n",
+        "        \n",
+        "        if (length(selected) > 0) {\n",
+        "            cor_selected_candidates <- cor(X_tr[, selected, drop = F], X_tr[, candidates, drop = F])\n",
+        "            redundancy_score <- apply(cor_selected_candidates, 2, mean)\n",
+        "        }\n",
+        "        \n",
+        "        mRMR_score <- correlation[candidates] - redundancy_score\n",
+        "        selected_current <- candidates[which.max(mRMR_score)]\n",
+        "        selected <- c(selected, selected_current)\n",
+        "        candidates <- setdiff(candidates, selected_current)\n",
+        "    }\n",
+        "    \n",
+        "    ranking <- selected\n",
+        "     \n",
+        "    for (nb_features in 1:n) {\n",
+        "        DS <- cbind(X_tr[, ranking[1:nb_features], drop = F], damage_grade = Y_tr)\n",
+        "       # Model fit (using lm function)\n",
+        "        model<- lm(damage_grade~.,DS)\n",
+        "        Y_hat_ts<- predict(model,X_ts[,ranking[1:nb_features],drop=F])\n",
+        "        \n",
+        "        # Cross-validation error = MSE\n",
+        "        CV_err[nb_features,i]<-mean((Y_hat_ts-Y_ts)^2)\n",
+        "    }\n",
+        "}  \n",
+        "\n",
+        "print(paste(\"#Features: \", c(1:n), \" ; CV error=\", round(apply(CV_err, 1, mean), digits = 4), \" ; std dev=\", round(apply(CV_err, 1, sd), digits = 4)))\n",
+        "\n",
+        "CV_err_svm_single_model_fs <- CV_err\n"
+      ],
       "metadata": {
         "id": "2LM-S5ZJHqOS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CV_folds <- 10\n",
+        "#PCA\n",
+        "size_CV <-floor(N/CV_folds)\n",
+        "\n",
+        "CV_err<-matrix(0,nrow=n,ncol=CV_folds)\n",
+        "\n",
+        "# Compute PCA on the full input dataset X and return the dataset transformed in the space of principal components\n",
+        "X_pca<-data.frame(prcomp(encoded_train_data,retx=T)$x)\n",
+        "\n",
+        "for (i in 1:CV_folds) {\n",
+        "    \n",
+        "    idx_ts<-(((i-1)*size_CV+1):(i*size_CV))  ### idx_ts represents the indices of the test set the i-th fold\n",
+        "    X_ts<-X_pca[idx_ts,]  \n",
+        "    Y_ts<-train_labels$damage_grade[idx_ts]  \n",
+        "     \n",
+        "    idx_tr<-setdiff(1:N,idx_ts) ### idx_tr represents  indices of the training sefor the i-th fold\n",
+        "    X_tr<-X_pca[idx_tr,]\n",
+        "    Y_tr<-train_labels$damage_grade[idx_tr]         \n",
+        "     \n",
+        "    for (nb_features in 1:n) {\n",
+        "        # Create a dataset including only the first nb_features principal components\n",
+        "        DS<-cbind(X_tr[,1:nb_features,drop=F],damage_grade=Y_tr)\n",
+        "        \n",
+        "        # Model fit (using lm function)\n",
+        "        model<- lm(damage_grade~.,DS)\n",
+        "        \n",
+        "        # Model predict\n",
+        "        Y_hat_ts<- predict(model,X_ts[,1:nb_features,drop=F])\n",
+        "        \n",
+        "        CV_err[nb_features,i]<-mean((Y_hat_ts-Y_ts)^2)\n",
+        "    }\n",
+        "}  \n",
+        "\n",
+        "print(paste(\"#features: \",c(1:n),\" ; CV error=\",round(apply(CV_err,1,mean),digits=4), \" ;  std dev=\",round(apply(CV_err,1,sd),digits=4)))"
+      ],
+      "metadata": {
+        "id": "knjlBtWzE0QX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CV_folds <- 10\n",
+        "\n",
+        "size_CV <-floor(N/CV_folds)\n",
+        "#selected_nb_features <- 69\n",
+        "CV_err<-matrix(0,nrow=n,ncol=CV_folds)\n",
+        "\n",
+        "for (i in 1:CV_folds) {\n",
+        "    \n",
+        "    idx_ts<-(((i-1)*size_CV+1):(i*size_CV))  ### idx_ts represents the indices of the test set the i-th fold\n",
+        "    X_ts<-encoded_train_data[idx_ts,]\n",
+        "    Y_ts<-train_labels$damage_grade[idx_ts]\n",
+        "     \n",
+        "    idx_tr<-setdiff(1:N,idx_ts) ### idx_tr represents  indices of the training sefor the i-th fold\n",
+        "    X_tr<-encoded_train_data[idx_tr,]\n",
+        "    Y_tr<-train_labels$damage_grade[idx_tr]                          \n",
+        "    \n",
+        "    # Compute correlation across all the input variables and the target variable\n",
+        "    correlation_vector <-abs(cor(X_tr,Y_tr))\n",
+        "    # Rank variables according to correlation with the output\n",
+        "    correlation_ranking_idx <-sort(correlation_vector,dec=T,index.return=T)$ix\n",
+        "     \n",
+        "    for (nb_features in 1:n) {\n",
+        "        # Create a dataset including only the nb_features most correlated variables with the output\n",
+        "        DS<-cbind(X_tr[,correlation_ranking_idx[1:nb_features],drop=F],damage_grade=Y_tr)\n",
+        "        # Model fit (using lm function)\n",
+        "        model<- lm(damage_grade~.,DS)\n",
+        "        \n",
+        "        # Model prediction\n",
+        "        Y_hat_ts<- predict(model,X_ts[,correlation_ranking_idx[1:nb_features],drop=F])\n",
+        "        \n",
+        "        # Cross validation error = MSE\n",
+        "        CV_err[nb_features,i] <- mean((Y_hat_ts-Y_ts)^2)\n",
+        "    }\n",
+        "}  \n",
+        "\n",
+        "print(paste(\"#Features: \",c(1:n),\" ; CV error=\",round(apply(CV_err,1,mean),digits=4), \" ; std dev=\",round(apply(CV_err,1,sd),digits=4)))\n",
+        "\n",
+        "variable_names <- names(X_tr)[correlation_ranking_idx[1:nb_features]]\n",
+        "print(paste(variable_names))\n",
+        "correlation_ranking_idx"
+      ],
+      "metadata": {
+        "id": "yR4Owr_hulcZ"
       },
       "execution_count": null,
       "outputs": []
